// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`FeatureDiscovery.ts should render correctly 1`] = `

<div aria-hidden="true"
     class="v-feature-discovery v-feature-discovery--lr-shifted theme--light"
     style="left: -164.3826898599915px; top: -164.3826898599915px; height: 700px; width: 700px;"
>
  <div class="v-feature-discovery__backdrop primary"
       style="transform-origin: calc(50% - 185.6173101400085px) calc(50% - 185.6173101400085px); justify-content: flex-end; padding-right: 15%;"
  >
    <div class="v-feature-discovery__content white--text"
         style="justify-content: flex-end;"
    >
      <div class="v-feature-discovery__wrapper">
        <div class="v-feature-discovery__title">
        </div>
        <div class="v-feature-discovery__text">
        </div>
      </div>
      <div class="v-feature-discovery__actions">
      </div>
    </div>
  </div>
  <div aria-hidden="true"
       class="v-feature-discovery__highlight white primary--text"
       style="height: 0px; width: 0px;"
  >
    <div class="v-feature-discovery__target">
    </div>
  </div>
</div>

`;

exports[`FeatureDiscovery.ts should render correctly when flat 1`] = `

<div aria-hidden="true"
     class="v-feature-discovery v-feature-discovery--flat v-feature-discovery--lr-shifted theme--light"
     style="left: -164.3826898599915px; top: -164.3826898599915px; height: 700px; width: 700px;"
>
  <div class="v-feature-discovery__backdrop primary"
       style="transform-origin: calc(50% - 185.6173101400085px) calc(50% - 185.6173101400085px); justify-content: flex-end; padding-right: 15%;"
  >
    <div class="v-feature-discovery__content white--text"
         style="justify-content: flex-end;"
    >
      <div class="v-feature-discovery__wrapper">
        <div class="v-feature-discovery__title">
        </div>
        <div class="v-feature-discovery__text">
        </div>
      </div>
      <div class="v-feature-discovery__actions">
      </div>
    </div>
  </div>
  <div aria-hidden="true"
       class="v-feature-discovery__highlight white primary--text"
       style="height: 0px; width: 0px;"
  >
    <div class="v-feature-discovery__target">
    </div>
  </div>
</div>

`;

exports[`FeatureDiscovery.ts should toggle 1`] = `

<div class="v-feature-discovery v-feature-discovery--active v-feature-discovery--lr-shifted theme--light"
     style="left: -164.3826898599915px; top: -164.3826898599915px; height: 700px; width: 700px;"
>
  <div class="v-feature-discovery__backdrop primary"
       style="transform-origin: calc(50% - 185.6173101400085px) calc(50% - 185.6173101400085px); justify-content: flex-end; padding-right: 15%;"
  >
    <div class="v-feature-discovery__content white--text"
         style="justify-content: flex-end;"
    >
      <div class="v-feature-discovery__wrapper">
        <div class="v-feature-discovery__title">
        </div>
        <div class="v-feature-discovery__text">
        </div>
      </div>
      <div class="v-feature-discovery__actions">
      </div>
    </div>
  </div>
  <div aria-hidden="true"
       class="v-feature-discovery__highlight white primary--text"
       style="height: 0px; width: 0px;"
  >
    <div class="v-feature-discovery__target">
      <body style="display: block;"
            class="primary--text"
      >
      </body>
    </div>
  </div>
</div>

`;

exports[`FeatureDiscovery.ts should toggle 2`] = `

<div class="v-feature-discovery v-feature-discovery--lr-shifted theme--light"
     style="left: -164.3826898599915px; top: -164.3826898599915px; height: 700px; width: 700px;"
     aria-hidden="true"
>
  <div class="v-feature-discovery__backdrop primary"
       style="transform-origin: calc(50% - 185.6173101400085px) calc(50% - 185.6173101400085px); justify-content: flex-end; padding-right: 15%;"
  >
    <div class="v-feature-discovery__content white--text"
         style="justify-content: flex-end;"
    >
      <div class="v-feature-discovery__wrapper">
        <div class="v-feature-discovery__title">
        </div>
        <div class="v-feature-discovery__text">
        </div>
      </div>
      <div class="v-feature-discovery__actions">
      </div>
    </div>
  </div>
  <div aria-hidden="true"
       class="v-feature-discovery__highlight white primary--text"
       style="height: 0px; width: 0px;"
  >
    <div class="v-feature-discovery__target">
      <body style="display: block;"
            class="primary--text"
      >
      </body>
    </div>
  </div>
</div>

`;
